--- a/trabalho-auditoria/index.html
+++ b/trabalho-auditoria/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="modal-body">
                <p>Eu, <span id="username"></span> aceito os termos apresentados.
-                   <strong>AdotaJáMaricá</strong>, em conformidade com as disposições da <a
+                   <strong>Maricá2023</strong>, em conformidade com as disposições da <a
                      target="_blank" href="https://www.planalto.gov.br/ccivil_03/_ato2015-2018/2018/lei/l13709.htm">Lei
                
                </p>
